# Ammo-Patcher

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  nexus.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/workflows/: Build.yml  CMake SKSE Setup.yml
Configuration/: test.json
Configuration/Global/: Default.json  MainHint.json  Vanilla.json
Configuration/My Config/: Ammo_Patcher.json  Ammo_Patcher_Default.json  test.json
cmake/: Version.rc.in  automatic-github-workflow-setup.cmake  compress-artifact.cmake  skse-fomod.cmake
contrib/Distribution/Common/: Action Based Projectiles.json  Ammo_Patcher.json  Ammo_Patcher_Default.json  ExclusionHint.json  MainHint.json
contrib/Distribution/data/skse/plugins/: APConfig_schema.json  AP_Rules.json
contrib/Distribution/data/skse/plugins/Ammo Patcher/Presets/: Action Based Projectiles.json  Default.json  Vanilla.json
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
include/: APUtils.h  DataHandler.h  Events.h  FilePtrManager.h  ImGuiIDGuard.h  ImGuiTreeNodeGuard.h  PCH.h  Settings.h  UI.h  logging.h  timeit.h  utils.h
include/SKSE-MCP/: SKSEMenuFramework.h
include/SkyPatcher/: ammo.h  utility.h
json/custom/: Ammo_Patcher.json
json/python/: AmmoPatcherConfigModel.py  requirements.txt
src/: DataHandler.cpp  Events.cpp  ImGuiIDGuard.cpp  ImGuiTreeNodeGuard.cpp  Main.cpp  PCH.cpp  Settings.cpp  UI.cpp  logging.cpp  timeit.cpp
src/SkyPatcher/: ammo.cpp  utility.cpp
